# riru_unity_example

./: .gitmodules  README.md  build.gradle  gradle.properties  module.gradle  settings.gradle
module/: build.gradle
module/magisk_module/: customize.sh  verify.sh
module/src/main/cpp/: CMakeLists.txt  enhanced_dlfcn.c  hook_main.cpp  hook_main.h  il2cpp.h  linked_list.h  main.cpp  soinfo.h
module/src/main/cpp/include/: config.h  zygisk.hpp
module/src/main/cpp/template/: config.cpp
module/src/main/cpp/whale/src/: interceptor.h
module/src/main/cpp/whale/src/platform/linux/: process_map.cc
template/magisk_module/: customize.sh  module.prop  riru.sh
